Refactored and fixed Sonar